# research-assistant

./: .gitignore  CLAUDE.md  ECHO_CHECKLIST.md  ECHO_QA.md  ECHO_UX_QA.md  FEATURES.md  GEMINI.md  GEO_UX_SPEC.md  GEO_WIRING_SPEC.md  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  pyproject.toml
app/: globals.css  layout.tsx
app/api/ai/chat/: route.ts
app/api/projects/: route.ts
components/: .BlockEditor.tsx.swp  AIWritingTab.tsx  BlockAIPopup.tsx  BlockEditor.tsx  BottomPane.tsx  CitationGraph.tsx  CommandPalette.tsx  EditorToolbar.tsx  MainApp.tsx  NewProjectModal.tsx  NotebookPane.tsx  NotebookSourcePanel.tsx  OutlinePanel.tsx  PdfViewer.tsx  SourcesTab.tsx  TopBar.tsx  VersionTimeline.tsx  ZoteroTab.tsx
data/projects/: 045dc0843460.json  16acc64ba4ef.json  2c44618cee32.json  31d3563ddfc9.json  39bigi4pgmn1lf6fi.json  6abe9ce56164.json  98ad1ade1731.json  9a9cc315a5f3.json  f86wx0rgpmn15pysv.json  wd4kpc1t0mn1bsp6c.json
lib/: citationFormatter.ts  docxExporter.ts  readability.ts  sounds.ts
server/: app.py  config.py  export.py  mcp_client.py  openclaw_client.py  zotero_client.py
server/routes/: ai.py  export.py  notebooks.py  projects.py  zotero.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AskNotebookPane.tsx  ProjectSetup.tsx  WritingPane.tsx  ZoteroPane.tsx
src/lib/: export.ts  types.ts  utils.ts
static/: index.html
static/css/: style.css
static/js/: ai-writing-pane.js  api.js  app.js  editor-pane.js  notebook-pane.js  references-pane.js
store/: useStore.ts
types/: index.ts
(+21 files in other folders)
