[project]
name = "research-assistant"
version = "0.1.0"
description = "Research assistant webapp integrating NotebookLM and Zotero"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "mcp>=1.0",
    "python-multipart>=0.0.18",
]

[project.scripts]
research-assistant = "server.app:main"
